--- a/Source/Rainbow/rainbow/build.gradle
+++ b/Source/Rainbow/rainbow/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven'
+
+group = 'com.github.julialoseva'
 
 android {
     compileSdkVersion 26
